Fixed url and change project

--- a/html/about.html
+++ b/html/about.html
@@ -2,40 +2,61 @@
 <html>
   <head>
     <title>About</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../asset/css/normalize.css">
-    <link rel="stylesheet" href="../../asset/css/base.css">
-    <link rel="stylesheet" href="../../asset/css/header.css">
-    <link rel="stylesheet" href="../../asset/css/section.css">
-    <link rel="stylesheet" href="../../asset/css/about.css">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../asset/css/normalize.css" />
+    <link rel="stylesheet" href="../asset/css/base.css" />
+    <link rel="stylesheet" href="../asset/css/header.css" />
+    <link rel="stylesheet" href="../asset/css/section.css" />
+    <link rel="stylesheet" href="../asset/css/about.css" />
   </head>
   <body>
-    <header><a class="name" href="#">HungHCC</a>
+    <header>
+      <a class="name" href="#">HungHCC</a>
       <div class="wrap">
-        <div class="icon"><a href="#" target="_blank"><i class="fab fa-instagram"></i></a><a href="#" target="_blank"><i class="fab fa-twitter"></i></a><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <div class="icon">
+          <a href="#" target="_blank"><i class="fab fa-instagram"></i></a
+          ><a href="#" target="_blank"><i class="fab fa-twitter"></i></a
+          ><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </div>
         <div class="menuIcon" data-clicked="false"></div>
       </div>
       <nav class="hiddenNav">
         <ul>
-          <li><a target="_blank" href="#">Home  </a></li>
-          <li><a target="_blank" href="../BookLandingPage/main.html">Works  </a></li>
+          <li><a target="_blank" href="#">Home </a></li>
+          <li>
+            <a target="_blank" href="../BookLandingPage/main.html">Works </a>
+          </li>
           <li><a target="_blank" href="about.html">About me</a></li>
           <li><a target="_blank" href="#">Contact</a></li>
-          <li class="icon"> <a href="#" target="_blank"><i class="fab fa-instagram"></i></a><a href="#" target="_blank"><i class="fab fa-twitter"></i></a><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <li class="icon">
+            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a
+            ><a href="#" target="_blank"><i class="fab fa-twitter"></i></a
+            ><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
           </li>
         </ul>
       </nav>
     </header>
     <section class="top">
-      <div class="section about-me" id="section4"><img class="hero_img" src="../../asset/img/hunghcc.jpg" alt="">
+      <div class="section about-me" id="section4">
+        <img class="hero_img" src="../asset/img/hunghcc.jpg" alt="" />
         <div class="wrapper">
           <div class="title">
-            <h2 class="title_section">About Me<br>
-              <div class="border"><span id="border1"></span><span id="border2"></span></div>
+            <h2 class="title_section">
+              About Me<br />
+              <div class="border">
+                <span id="border1"></span><span id="border2"></span>
+              </div>
             </h2>
-            <p class="kind_section">Software Engineering    </p>
+            <p class="kind_section">Software Engineering</p>
           </div>
           <!--a(href="#" id="img-link")-->
         </div>
@@ -45,54 +66,110 @@
       <div class="introduce">
         <h2 class="skill-intro">Who i am</h2>
         <div class="detail">
-          <p class="describe">My name is Hung Bui and I'm studing at FPT University which my major is software engineering. <br> My favorite habit is playing game, watch horror movie, learn new technologies and like to read book about programming language.</p><img src="../../asset/img/hunghcc.jpg" alt="">
+          <p class="describe">
+            I’m a software engineering which has inserted in web development. By
+            having strong passionate, loving awesome stuffs and excited when
+            facing new challenges I can put a lot of effort, spend most of time
+            to solve problem in front of my laptop. I like to learn and doing
+            something news with online resources, courses and reading blogs.
+            <br />Creative, self-responsibilities and interactive when working
+            in group.
+            <img src="../asset/img/hunghcc.jpg" alt="" />
+          </p>
         </div>
       </div>
       <div class="skill">
         <h2 class="skill-intro">skill set</h2>
         <div class="skill-wrapper">
           <div class="skill-set-item">
-            <div class="skill-img"><img src="../../asset/img/html.svg" alt="html/css"></div>
+            <div class="skill-img">
+              <img src="../asset/img/node-js-icon-28.jpg" alt="nodejs" />
+            </div>
             <div class="skill-detail">
               <div class="skill-meta">
-                <p class="skill-name">HTML/CSS</p>
-                <p class="skill-year">1 year</p>
-                <p class="skill-per">50%</p>
+                <p class="skill-name">Node.js</p>
+                <p class="skill-year">1️⃣ year</p>
+                <p class="skill-per">40%</p>
               </div>
-              <div class="skill-bar-wrapper"><span class="skill-bar">               </span></div>
+              <div class="skill-bar-wrapper">
+                <span class="skill-bar"></span>
+              </div>
             </div>
           </div>
           <div class="skill-set-item">
-            <div class="skill-img"><img src="../../asset/img/pug.svg" alt="pug"></div>
+            <div class="skill-img">
+              <img src="../asset/img/react-icon.png" alt="react.js" />
+            </div>
+            <div class="skill-detail">
+              <div class="skill-meta">
+                <p class="skill-name">React.js</p>
+                <p class="skill-year">1️⃣ year</p>
+                <p class="skill-per">50%</p>
+              </div>
+              <div class="skill-bar-wrapper">
+                <span class="skill-bar"></span>
+              </div>
+            </div>
+          </div>
+          <div class="skill-set-item">
+            <div class="skill-img">
+              <img src="../asset/img/js.svg" alt="javascript" />
+            </div>
+            <div class="skill-detail">
+              <div class="skill-meta">
+                <p class="skill-name">Javascript</p>
+                <p class="skill-year">2️⃣ year</p>
+                <p class="skill-per">60%</p>
+              </div>
+              <div class="skill-bar-wrapper">
+                <span class="skill-bar"> </span>
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-set-item">
+            <div class="skill-img">
+              <img src="../asset/img/html.svg" alt="html/css" />
+            </div>
+            <div class="skill-detail">
+              <div class="skill-meta">
+                <p class="skill-name">HTML/CSS</p>
+                <p class="skill-year">3 year</p>
+                <p class="skill-per">80%</p>
+              </div>
+              <div class="skill-bar-wrapper">
+                <span class="skill-bar"> </span>
+              </div>
+            </div>
+          </div>
+          <div class="skill-set-item">
+            <div class="skill-img">
+              <img src="../asset/img/pug.svg" alt="pug" />
+            </div>
             <div class="skill-detail">
               <div class="skill-meta">
                 <p class="skill-name">Pug</p>
                 <p class="skill-year">1 year</p>
                 <p class="skill-per">60%</p>
               </div>
-              <div class="skill-bar-wrapper"><span class="skill-bar"></span></div>
+              <div class="skill-bar-wrapper">
+                <span class="skill-bar"></span>
+              </div>
             </div>
           </div>
           <div class="skill-set-item">
-            <div class="skill-img"><img src="../../asset/img/sass.svg" alt="sass"></div>
+            <div class="skill-img">
+              <img src="../asset/img/sass.svg" alt="sass" />
+            </div>
             <div class="skill-detail">
               <div class="skill-meta">
                 <p class="skill-name">Sass</p>
                 <p class="skill-year">1 year</p>
                 <p class="skill-per">70%</p>
               </div>
-              <div class="skill-bar-wrapper"><span class="skill-bar"></span></div>
-            </div>
-          </div>
-          <div class="skill-set-item">
-            <div class="skill-img"><img src="../../asset/img/js.svg" alt="javascript"></div>
-            <div class="skill-detail">
-              <div class="skill-meta">
-                <p class="skill-name">Javascript</p>
-                <p class="skill-year">1 year</p>
-                <p class="skill-per">40%</p>
+              <div class="skill-bar-wrapper">
+                <span class="skill-bar"></span>
               </div>
-              <div class="skill-bar-wrapper"><span class="skill-bar">           </span></div>
             </div>
           </div>
         </div>
@@ -101,13 +178,13 @@
     <section class="footer">
       <div class="contact">
         <h2 class="email">buisihung321@gmail.com</h2>
-        <h2 class="name">HungHcc        </h2>
+        <h2 class="name">HungHcc</h2>
       </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">   </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="../../asset/js/header.js"></script>
-    <script src="../../asset/js/about.js"></script>
+    <script src="../asset/js/header.js"></script>
+    <script src="../asset/js/about.js"></script>
   </body>
 </html>
