--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="asset/css/fap-nav.css">
   </head>
   <body>
-    <header><a target="_blank" class="name" href="#">HungHCC</a>
+    <header><a  class="name" href="#">HungHCC</a>
       <div class="wrap">
         <div class="icon"><a target="_blank" href="#" target="_blank"><i class="fab fa-instagram"></i></a><a target="_blank" href="#" target="_blank"><i class="fab fa-twitter"></i></a><a target="_blank" href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </div>
@@ -21,10 +21,10 @@
       </div>
       <nav class="hiddenNav">
         <ul>
-          <li><a target="_blank" href="main.html">Home</a></li>
-          <li><a target="_blank" href="BookLandingPage/BookSell/main.html">Works	</a></li>
-          <li><a target="_blank" href="html/about.html">About me</a></li>
-          <li><a target="_blank" href="#">Contact</a></li>
+          <li><a  href="/index.html">Home</a></li>
+          <li><a  href="/BookLandingPage/BookSell/main.html">Works	</a></li>
+          <li><a  href="/html/about.html">About me</a></li>
+          <li><a  href="#">Contact</a></li>
           <li class="icon"> <a target="_blank" href="#" target="_blank"><i class="fab fa-instagram"></i></a><a target="_blank" href="#" target="_blank"><i class="fab fa-twitter"></i></a><a target="_blank" href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
           </li>
         </ul>
@@ -35,22 +35,22 @@
         <div class="section" id="section1">
           <div class="wrapper">
             <div class="title">
-              <h2 class="title_section">Hair Space<br>REILE
+              <h2 class="title_section">React Burger<br>
                 <div class="border"><span id="border1"></span><span id="border2"></span></div>
               </h2>
               <p class="kind_section">website</p>
-              <div class="btn-wrapper"><a target="_blank" class="btn" href="#">Show me more</a></div>
+              <div class="btn-wrapper"><a target="_blank" class="btn" href="https://react-burger-app-6026f.firebaseapp.com/">Show me more</a></div>
             </div><a target="_blank" href="#" id="img-link"></a>
           </div>
         </div>
         <div class="section" id="section2">
           <div class="wrapper">
             <div class="title">
-              <h2 class="title_section">WomanDay <br>Project
+              <h2 class="title_section">Manage shop<br>FaceBook
                 <div class="border"><span id="border1"></span><span id="border2"></span></div>
               </h2>
               <p class="kind_section">website</p>
-              <div class="btn-wrapper"><a target="_blank" class="btn" href="womanDayProject/New folder/index.html">Show me more</a></div>
+              <div class="btn-wrapper"><a target="" class="btn" href="https://manageshopfb.azurewebsites.net">Show me more</a></div>
             </div><a target="_blank" href="#" id="img-link"></a>
           </div>
         </div>
@@ -61,8 +61,8 @@
                 <div class="border"><span id="border1"></span><span id="border2"></span></div>
               </h2>
               <p class="kind_section">website</p>
-              <div class="btn-wrapper"><a target="_blank" class="btn" href="BookLandingPage/BookSell/👛.html">Show me more</a></div>
-            </div><a target="_blank" href="BookLandingPage/BookSell/a.html" id="img-link"></a>
+              <div class="btn-wrapper"><a target="_blank" class="btn" href="/BookLandingPage/BookSell/a.html">Show me more</a></div>
+            </div><a target="_blank" href="/BookLandingPage/BookSell/a.html" id="img-link"></a>
           </div>
         </div>
         <div class="section about-me" id="section4">
@@ -82,10 +82,10 @@
     <div class="test"></div>
     <div id="fap-nav">
       <ul>
-        <li><a target="_blank" class="active" href="#section1"></a></li>
-        <li><a target="_blank" href="#section2"></a></li>
-        <li><a target="_blank" href="#section3"></a></li>
-        <li><a target="_blank" href="#section4"></a></li>
+        <li><a class="active" href="#section1"></a></li>
+        <li><a href="#section2"></a></li>
+        <li><a href="#section3"></a></li>
+        <li><a href="#section4"></a></li>
       </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
