Change nav at about page

--- a/html/about.html
+++ b/html/about.html
@@ -31,12 +31,12 @@
       </div>
       <nav class="hiddenNav">
         <ul>
-          <li><a target="_blank" href="#">Home </a></li>
-          <li>
+          <li><a  href="#">Back to home </a></li>
+          <!-- <li>
             <a target="_blank" href="../BookLandingPage/main.html">Works </a>
           </li>
           <li><a target="_blank" href="about.html">About me</a></li>
-          <li><a target="_blank" href="#">Contact</a></li>
+          <li><a target="_blank" href="#">Contact</a></li> -->
           <li class="icon">
             <a href="#" target="_blank"><i class="fab fa-instagram"></i></a
             ><a href="#" target="_blank"><i class="fab fa-twitter"></i></a
