--- a/html/about.html
+++ b/html/about.html
@@ -178,6 +178,7 @@
     <section class="footer">
       <div class="contact">
         <h2 class="email">buisihung321@gmail.com</h2>
+        <h4 class="github"><a href="https://github.com/buisihung11" >My github</a></h4>
         <h2 class="name">HungHcc</h2>
       </div>
     </section>
